# tiny-CNN

./: CMakeLists.txt
NeuralNetwork/: CMakeLists.txt  Network.cpp  bias_neuron.cpp  bias_neuron.h  feed_forward_neuron.cpp  feed_forward_neuron.h  input_neuron.cpp  input_neuron.h  link.cpp  link.h  network.cpp  network.h  neuron.cpp  neuron.h  pattern.cpp  pattern.h
