cmake_minimum_required(VERSION 3.5)
project(tiny-CNN)

set(CMAKE_CXX_STANDARD 14)
set(BOOST_VERSION 1.54)
set(GOOGLE_TEST_VERSION 1.8.0)
set(BOOST_ROOT $ENV{THIRDPARTY}/boost/${BOOST_VERSION})
set(GOOGLE_TEST_ROOT $ENV{THIRDPARTY}/googletest/${GOOGLE_TEST_VERSION})

set(BOOST_LIBRARY_DIRS "${BOOST_ROOT}/lib")
set(BOOST_INCLUDE_DIRS "${BOOST_ROOT}/include")

set(GTEST_INCLUDE_DIRS "${GOOGLE_TEST_ROOT}/include")
set(GTEST_LIBRARY_DIRS "${GOOGLE_TEST_ROOT}/lib")

include_directories(${BOOST_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS})

link_directories(${BOOST_LIBRARY_DIRS} ${GTEST_LIBRARY_DIRS})

set(CMAKE_CXX_COMPILER g++-5)
set(CMAKE_CXX_FLAGS "-lstdc++ -time -pthread -DBOOST_LOG_DYN_LINK")
set(CMAKE_CXX_FLAGS_DEBUG "-Wall -g")
set(CMAKE_CXX_FLAGS_RELEASE "-Ofast")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

add_subdirectory(NeuralNetwork)

enable_testing()
add_test(NAME CppClass.UnitTest COMMAND CppClass.UnitTest WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")